Kubernetes/Production-onpremise/rabbitmq/06-destinationrule-rabbitmq.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: rabbitmq
  namespace: rabbitmq-system
spec:
  host: rabbitmq-prod.rabbitmq-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
